--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
     var stompClient = null;
 
     function connect() {
-        var socket = new SockJS('/ws');
+        var socket = new SockJS('http://localhost:8080/ws-stomp');
         stompClient = Stomp.over(socket);
         stompClient.connect({}, function (frame) {
             console.log('Connected: ' + frame);
@@ -31,7 +31,7 @@
     function sendMessage() {
         var messageContent = document.getElementById("message").value;
         if (messageContent && stompClient) {
-            stompClient.send("/app/message", {}, JSON.stringify({'content': messageContent}));
+            stompClient.send("/app/send", {}, JSON.stringify({'sender': 'User', 'content': messageContent}));
             document.getElementById("message").value = "";
         }
     }
